@@ -655,10 +655,11 @@ def main():
 
     * Typical usage:
 
-    > python pywin32_postinstall.py -install
+    > python -m pywin32_postinstall -install
 
-    This should be run automatically after installation,
-    but if it fails you can run it again.
+    * or (shorter but you don't have control over which python environment is used)
+
+    > pywin32_postinstall -install
 
     Given EXE installers are no longer provided,
     and wheel installs can't run postinstall scripts,
